--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -44,17 +44,19 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: 'Build'
         shell: bash
         run: |
           ${{ inputs.install_command }}
           ${{ inputs.build_command }}
-      - uses: haya14busa/action-cond@v1
-        id: preview
-        with:
-          cond: ${{ inputs.preview == 'true' }}
-          if_true: "pr-${{ github.event.pull_request.number }}"
-          if_false: "main"
+
+      #- uses: haya14busa/action-cond@v1
+      # id: preview
+      # with:
+          # cond: ${{ inputs.preview == 'true' }}
+          #if_true: "pr-${{ github.event.pull_request.number }}"
+          #if_false: "main"
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
